fix slider arrow z-index

--- a/src/styles/05-objects/_objects.sliders.scss
+++ b/src/styles/05-objects/_objects.sliders.scss
@@ -173,6 +173,7 @@
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
+    z-index: 3;
 
     &--prev {
       left: 0;
